# fastapi-backend

./: .gitignore  .pre-commit-config.yaml  .test.env  Makefile  README.md  TODO.txt  docker-compose-dev.yaml  docker-compose.yml  flake8  logger_config.py  main.py  pyproject.toml  settings.py
fastapi_backend/: README.md  run_admin_panel.py  run_backend.py
fastapi_backend/admin_panel/: Dockerfile  lifespan.py  requirements.txt  settings.py
fastapi_backend/backend/: Dockerfile  lifespan.py  requirements.txt  settings.py
fastapi_backend/backend/forms/: auth.py
fastapi_backend/backend/migrations/: env.py
fastapi_backend/backend/modules/: password.py  token.py
fastapi_backend/backend/repositories/: __init__.py  abc.py  user.py
fastapi_backend/backend/responses/: auth_response.py
fastapi_backend/backend/routers/: auth.py  email.py  user.py
fastapi_backend/backend/services/: abc.py  authentication.py  authorization.py  email.py
fastapi_backend/backend/tests/integration/: client.py  conftest.py
fastapi_backend/backend/tests/integration/testing_auth/: test_api_authentication_with_credentials.py  test_api_authentication_with_token.py  test_api_authorization.py
fastapi_backend/backend/tests/integration/testing_email/: test_api_is_unique_email.py
fastapi_backend/backend/tests/integration/testing_user/: test_api_about_me.py
fastapi_backend/backend/tests/unit/testing_auth/: test_auth_form.py  test_password_service.py  test_token_service.py  tests_schemas.py
fastapi_backend/connectors/: database.py  queue.py
fastapi_backend/core/: settings.py  settings_func.py
fastapi_backend/core/configs/: .isort.cfg  .pre-commit-config.yaml  alembic.ini  flake8  logging_config.json  pytest.ini
fastapi_backend/core/connectors/: __init__.py  postgresql.py  rabbitmq.py  redis.py
fastapi_backend/core/custom_type/: base.py  user.py
fastapi_backend/core/envs/: .env.test  .env_exemple
fastapi_backend/core/exceptions/: auth.py  commnon.py
fastapi_backend/core/forms/: auth.py
fastapi_backend/core/migrations/: env.py
fastapi_backend/core/migrations/versions/: 15fc955565a4_initial_migration.py
fastapi_backend/core/models/: __init__.py  abc.py  logs.py  user.py
fastapi_backend/core/schemas/: abc.py  auth.py  response.py  user.py
fastapi_backend/core/startlet_exceptions/: abc.py  auth.py  commnon.py
fastapi_backend/core/validators/: length.py
fastapi_backend/exceptions/: abc.py  auth.py  commnon.py
fastapi_backend/form/: auth.py
fastapi_backend/models/: abc.py  base.py  user.py
fastapi_backend/modules/: __init__.py  password.py  token.py
fastapi_backend/repositories/: abc.py  base.py  password.py  sqlalchemy.py  token.py  user.py
fastapi_backend/routers/: auth.py  email.py  user.py
fastapi_backend/schemas/: abc.py  auth.py  base.py  response.py  token.py  user.py
fastapi_backend/services/: __init__.py  abc.py  auth.py  authentication.py  authorization.py  base.py  email.py  messages.py
fastapi_backend/smtp/: Dockerfile  README.md  main.py  modules.py  requirements.txt  settings.py
fastapi_backend/typing/: base.py
fastapi_backend/utils/: exceptions.py  lifespan.py
fastapi_backend/validators/: length.py
logs/: auth.txt
tests/integration/: client.py  conftest.py
tests/integration/backend/: conftest.py
tests/integration/backend/testing_auth/: conftest.py  test_api_authentication_with_credentials.py  test_api_authentication_with_token.py  test_api_authorization.py
tests/integration/backend/testing_email/: test_api_is_unique_email.py
tests/integration/backend/testing_user/: test_api_about_me.py
tests/integration/testing_auth/: test_api_authentication_with_credentials.py  test_api_authentication_with_token.py  test_api_authorization.py
tests/integration/testing_email/: test_api_is_unique_email.py
tests/integration/testing_user/: test_api_about_me.py
tests/unit/backend/testing_auth/: test_auth_form.py  test_password_service.py  test_token_service.py  tests_schemas.py
tests/unit/testing_auth/: test_auth_form.py  test_password_service.py  test_token_service.py  tests_schemas.py
