[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["Nif-Naf <Nif-Naf94@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
pydantic = {extras = ["email"], version = "^2.6.4"}
# Database.
alembic = "^1.13.3"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
# Auth.
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
# Other dependencies.
python-dotenv = "^1.0.1"
python-dateutil = "^2.8.2"
fastapi-admin = "^1.0.4"
pika = "^1.3.2"
redis = "^5.1.1"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
# Testing.
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
pytest-dotenv = "^0.5.2"
httpx = "^0.27.0"
aiosqlite= "^0.20.0"
# Code improvement.
pre-commit = "^3.3.3"
isort = "^5.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-annotations-coverage = "^0.0.6"
flake8-bandit = "^4.1.1"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^23.9.16"
flake8-builtins = "^2.2.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-fixme = "^1.1.1"
flake8-future-import = "^0.4.7"
flake8-pyi = "^23.11.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"
flake8-mutable = "^1.2.0"
flake8-string-format = "^0.3.0"
flake8-todo = "^0.7"
flake8-unused-arguments = "^0.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
